Fixed table overflow on desktop devices

--- a/web/css/base/_typography.less
+++ b/web/css/base/_typography.less
@@ -83,11 +83,9 @@
         }
     }
 
-    @media @media-md-down {
-        .table-wrapper {
-            overflow-x: auto;
-            position: relative;
-        }
+    .table-wrapper {
+        overflow-x: auto;
+        position: relative;
     }
     table {
         .text-align(left);
